[package]
name = "packstream_v1"
version = "0.1.0"
authors = ["Yoann Sitbon <yoann@askia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
packstream_core = { path = "../packstream_core" }
packstream_proc = { path = "../packstream_proc" }
